--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_core: ^2.1.0
   get: ^4.6.5
   http: ^0.13.5
+  flutter_staggered_grid_view: ^0.4.0
+
 
 
 dev_dependencies:
