--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   http: ^0.13.5
   flutter_staggered_grid_view: ^0.4.0
   cloud_firestore: ^4.0.4
+  flutter_otp_text_field: ^1.1.1
 
 
 
